# Mar

./: .gitignore  CMakeLists.txt  Grammar.ebnf  LICENSE  README.md
Source/: .main.cpp.swn  .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  main.cpp
Source/Codegen/: Codegen.cpp  Codegen.hpp
Source/Evaluator/: ASTVisualizer.cpp  ASTVisualizer.hpp  Evaluator.cpp  Evaluator.hpp
Source/Evaluator/Visitor/: Visitor.hpp
Source/Lexer/: .Lexer.cpp.swl  .Lexer.cpp.swm  .Lexer.cpp.swn  .Lexer.cpp.swo  .Lexer.cpp.swp  .Lexer.hpp.swp  Lexer.cpp  Lexer.hpp  Token.hpp  \
Source/Parser/: Parser.cpp  Parser.hpp
Source/Parser/Nodes/: .Expr.hpp.swp  Decl.hpp  Expr.hpp  Stmt.hpp
Source/Parser/Symbol Table/: Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
Source/Parser/SymbolTable/: SymbolTable.cpp  SymbolTable.hpp
Source/Sema/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
Source/Sema/SymbolTable/: SymbolTable.cpp  SymbolTable.hpp
Test/: test1.mar  test2.mar  test3.mar  test4.mar  test5.mar
Tests/: Comments.mar  Declarations.mar  HelloWorld.mar  Test1.mar  Test2.mar  Test3.mar  WhileTest.mar
src/: CMakeLists.txt  main.cpp
src/Evaluator/: ASTVisualizer.cpp  ASTVisualizer.hpp
src/Evaluator/Visitor/: Visitor.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp  Token.hpp
src/Parser/: Parser.cpp  Parser.hpp
src/Parser/Nodes/: Decl.hpp  Expr.hpp  Stmt.hpp
src/Sema/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
src/Sema/SymbolTable/: SymbolTable.cpp  SymbolTable.hpp
src/utils/: ASTVisualizer.cpp  ASTVisualizer.hpp
test/: CMakeLists.txt  main.cpp
test/source_test/: test1.mar  test3.mar  test4.mar  test6.mar
test/validation_tests/: test_comments.mar  test_const.mar
